--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           return false;
         });
         socket.on('chat message', function(msg){
+          console.log(msg);
           $('#messages').append($('<li>').text(msg));
           window.scrollTo(0, document.body.scrollHeight);
         });
