--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       var user = 0
         socket.on('connection', function(){
         user++
+          console.log(user)
           socket.emit('onlinecount', user);
         })
         
