--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     </style>
   </head>
   <body>
+    <title>A Multiplayer Game</title>
+    <style>
+      canvas {
+        width: 800px;
+        height: 600px;
+        border: 5px solid black;
+      }
+    </style>
+     <canvas id="canvas"></canvas>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
