--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ socket.on('state', function(players) {
   
   for (var id in players) {
     var player = players[id];
-    context.fillStyle = 'green';
+    context.fillStyle = player.color;
     context.beginPath();
     context.arc(player.x, player.y, 10, 0, 2 * Math.PI);
     context.fill();
