--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       canvas {
         background-image: url("https://i.gifer.com/ItS.gif");
         background-repeat: no-repeat;
+        background-size: 1000px 1000px;
         width: 800px;
         height: 600px;
         border: 5px solid black;
