--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     </style>
   </head>
   <body>
+    <style>
+            html, body {
+                overflow: hidden;
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
+
+            #renderCanvas {
+                width: 100%;
+                height: 100%;
+                touch-action: none;
+            }
+        </style>
     <title>A Multiplayer Game</title>
      <canvas id="renderCanvas"></canvas>
     <ul id="messages"></ul>
@@ -119,7 +134,7 @@ setInterval(function() {
   
             for (var id in players) {
             var player = players[id];
-              player.mesh = player.mesh
+              player.mesh = new BABYLON.Mesh.CreateBox("box", 2, scene);
               player.mesh.position.x = player.x
               player.mesh.position.z = player.y
             }
