--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@ setInterval(function() {
   
             for (var id in players) {
             var player = players[id];
-              player.mesh = new BABYLON.Mesh.CreateBox("box", 2, scene);
+              player.mesh = "working!!!";
               alert(player.mesh)
-              player.mesh.position.x = player.x
-              player.mesh.position.z = player.y
+             // player.mesh.position.x = player.x
+           //   player.mesh.position.z = player.y
             }
             });
         
