--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ setInterval(function() {
   
             for (var id in players) {
             var player = players[id];
-              player.mesh = "working!!!";
+              player.mesh = BABYLON.Mesh.CreateBox("sphere1", 2, scene);
               alert(player.mesh)
              // player.mesh.position.x = player.x
            //   player.mesh.position.z = player.y
