--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ setInterval(function() {
             var player = players[id];
               player.mesh = new BABYLON.Mesh.CreateBox("sphere1", 2, scene);
               
+              console.log(player.mesh.position)
              // player.mesh.position.x = player.x
            //   player.mesh.position.z = player.y
             }
