--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ setInterval(function() {
               player.mesh = new BABYLON.Mesh.CreateBox("sphere1", 2, scene);
               
               console.log(player.mesh.position)
-             // player.mesh.position.x = player.x
+              player.mesh.position.x = player.x*.5
            //   player.mesh.position.z = player.y
             }
             });
