--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ setInterval(function() {
             var player = players[id];
               player.mesh = new BABYLON.Mesh.CreateBox("sphere1", 2, scene);
 
-             
+             player.mesh.position.x = Math.random()*10
              //   mesh.position.y = player.y
          
 
