--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ setInterval(function() {
             var player = players[id];
            
               if(cnt == 2){
+                console.log("yes")
                 player.mesh = new BABYLON.Mesh.CreateBox("sphere1", 2, scene);
               }
             /*  player.mesh = new BABYLON.Mesh.CreateBox("sphere1", 2, scene);
