--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ setInterval(function() {
               console.log(cnt)
             for (var id in players) {
             var player = players[id];
-           
+           console.log("this is random"+player.rnd)
               if(cnt == 2){
                 console.log("yes")
                 player.mesh = new BABYLON.Mesh.CreateBox("sphere1", 2, scene);
