--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@ setInterval(function() {
   socket.emit('movement', movement);
 }, 1000 / 60);
            
-           socket.on('online', function(msg) {
-             alert(msg)
-           })
+           socket.emit('online', "there's a new user online")
            var cnt = 0
            var pl = []
             socket.on('state', function(players) {
