--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@ setInterval(function() {
   socket.emit('movement', movement);
 }, 1000 / 60);
 
+           socket.on('online', function(data) {
+  console.log(data);
+});
+           
            var cnt = 0
            var pl = []
             socket.on('state', function(players) {
