--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ setInterval(function() {
 }, 1000 / 60);
 
            socket.on('online', function(data) {
-  console.log(data);
+  alert(data);
 });
            
            var cnt = 0
