--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ setInterval(function() {
               dir.y = shft
             player.mesh.position.y = dir.y
               
+              console.log("new y position "+dir.y)
               if(dir.move){
             player.mesh.position.y = dir.y
               }
