--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ setInterval(function() {
            document.addEventListener('keydown', function(event) {
              if(event.which == 32){
                shft += .5
+               socket.emit('shift', shft);
              }
            })
            
