--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@ setInterval(function() {
 
            var value = 0;
            socket.on('online', function(data) {
-  //alert(data);
-             value = data
+ console.log(data);
+      
 });
            
            var shft = 0
