--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ setInterval(function() {
                users += 1
                socket.emit("store", users) 
                if(users == 2){
-                socket.emit("store", users) 
+                //socket.emit("store", users) 
                }
              })
            })
